# VLN_strong

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
configs/: default.json
data/episodes/gazebo_small_eval/: README.md  manifest.jsonl
data/episodes/small_eval/: README.md  manifest.jsonl
data/episodes/synthetic_30/: README.md  manifest.jsonl
data/samples/: README.md  demo.jsonl
docs/: api_contract.md  handoff.md  progress.md  qwen_dashscope.md  reproduction_workflow.md  ros_turtlebot3.md  ubuntu20_setup.md  vision_adapter.md
scripts/: _bootstrap.py  drive_turtlebot3_episode.py  generate_pseudolabels.py  generate_synthetic_episodes.py  plan_instruction.py  record_gazebo_small_eval.sh  run_offline_episode.py  smoke_deepseek.py  smoke_qwen_vision.py  smoke_vision_adapter.py  summarize_run.py
src/taric_vln/: __init__.py  config.py  geometry.py  training.py  types.py
src/taric_vln/control/: __init__.py  commander.py
src/taric_vln/eval/: __init__.py  metrics.py
src/taric_vln/grounding/: __init__.py  traversability.py
src/taric_vln/memory/: __init__.py  cue_memory.py
src/taric_vln/perception/: __init__.py  cue_extractor.py  deepseek_client.py  qwen_client.py  text_planner.py  vision_adapter.py
src/taric_vln/ros/: __init__.py  (+3 more)
tests/: test_control.py  test_cue_extractor.py  test_deepseek_client.py  test_grounding.py  test_memory.py  test_metrics.py  test_qwen_client.py  test_ros_config.py  test_small_eval_dataset.py  test_smoke_script.py  test_summarize_run.py  test_synthetic_dataset.py  test_text_planner.py  test_vision_adapter.py
(+2 files in other folders)
